# PCStatsDisplay

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
elevated-helper/: Cargo.toml
elevated-helper/src/: main.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  logger_command.rs  main.rs
src-tauri/src/process/: elevated.rs  kill.rs  list.rs  mod.rs  types.rs
src-tauri/src/stats/: collector.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  types.rs
src-tauri/src/window/: manager.rs  mod.rs  tray.rs
src/components/LogPanel/: LogPanel.tsx
src/components/ProcessPanel/: KillConfirmModal.tsx  ProcessPanel.tsx  ProcessRow.tsx  ProcessTable.tsx  SearchBar.tsx
src/components/StatsPanel/: SparkLine.tsx  StatRow.tsx  StatsPanel.tsx  TempRing.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/shared/: ProgressBar.tsx  ResizeHandles.tsx  TabBar.tsx  Toast.tsx
src/hooks/: useProcesses.ts  useStats.ts  useWindow.ts
src/store/: processStore.ts  settingsStore.ts  statsStore.ts
src/styles/: globals.css  theme.css
src/types/: process.ts  stats.ts
