[package]
name = "pc-monitor"
version = "0.1.0"
edition = "2021"

# The lib crate is required by Tauri's build system
[lib]
name = "pc_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 core — tray-icon feature enables system tray support
tauri = { version = "2", features = ["tray-icon"] }

# Plugin: start on Windows boot
tauri-plugin-autostart = "2"

# Serialization: all structs crossing the IPC boundary must be serde-serializable
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform system stats: CPU, RAM, processes, disks, network
sysinfo = "0.30"

# NVIDIA GPU stats via NVML (optional — gracefully absent if no NVIDIA driver)
# The crate uses dynamic loading, so it compiles fine without an NVIDIA GPU installed.
nvml-wrapper = { version = "0.9", optional = true }

[features]
# Enable NVIDIA GPU stats (add --features nvidia to cargo build to activate)
nvidia = ["nvml-wrapper"]

# Required by Tauri — do not remove
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Optimize aggressively for a small, fast binary
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
